fixed homepage section spacing and made more toys navlink public

--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,5 @@ a.active {
 }
 
 .max-container {
-    @apply max-w-7xl mx-auto
+    @apply container mx-auto
 }
